app/styles/edit.scss
/* ... */
@media screen and (min-width: 1851px) {
    .editing-form button,
    .editing-form .btn {
        border: 0px;
        font-size: 15px;
        padding: 1px 4px;
        line-height: 1.346;
    }
    .editing-form input,
    .editing-form textarea,
    .editing-form select {
        font-size: 12px !important;
    }
    .form-control {
        height: 30px !important;
    }
    .title-text {
        font-size: 12px;
        line-height: 1;
        max-width: 200px;
        text-align: left;
    }
    .fsn {
        text-align: left;
    }
}
.popover {
    max-width: 400px;
    min-width: 350px;
}
.popover select.form-control {
    background-color: #fff;
    padding: 5px 20px 5px 15px;
    font-size: 12px;
    margin: 5px;
}
.editform .row {
    margin: 0px;
}
.formcontrol {
    font-size: 12px;
}
.widget-toolbar {
    padding-right: 10px;
    padding-left: 10px;
    font-size: 20px;
    box-shadow: none;
    width: 38px;
    line-height: 35px;
}
.widget-toolbar:hover {
    background-color: transparent;
    color: #424242;
}
#bp-taxonomy_canvas-panelBody {
    height: 100%;
}
#bp-taxonomy_canvas-panelBody ul {
    padding: 0;
}
#bp-taxonomy_canvas-mainPanel {
    height: 100%;
    margin: 5px 5px 5px 0;
    padding: 5px;
    overflow: auto;
    box-shadow: none;
}
#bp-taxonomy_canvas-mainPanel ul ul a {
    padding: 0;
    font-weight: 400;
}
#bp-taxonomy_canvas-mainPanel ul ul a:hover {
    font-weight: 500;
}
#bp-taxonomy_canvas-mainPanel ul a {
    display: inline;
    padding: 0;
}
#bp-taxonomy_canvas-mainPanel i {
    color: #00a4e4;
    font-size: 10px;
}
.alert-warning {
    background-color: #ffd54f;
    border-color: none;
    color: #8A6D3B;
}
.badge {
    display: inline-block;
    min-width: 10px;
    padding: 3px 7px;
    font-size: 10px;
    font-weight: bold;
    color: #FFF;
    line-height: 1;
    vertical-align: baseline;
    white-space: nowrap;
    text-align: center;
    background-color: transparent;
    border-radius: 10px;
}
.search-button {
    font-size: 18px;
    box-shadow: none;
}
.search-button:hover {
    font-size: 18px;
    box-shadow: none;
    background-color: transparent;
    color: #ffc107;
}
.alert-warning {
    color: black;
    background-image: linear-gradient(to bottom, #ffecb3 0px, #ffe082 100%);
    background-repeat: repeat-x;
    border-color: #F5E79E;
}
#bp-taxonomy_canvas-mainPanel .treeButton {
    height: 20px;
    font-size: 12px;
    vertical-align: middle;
}
#bp-taxonomy_canvas-mainPanel .treeButton:hover {
    background-color: #e6e6e6;
    color: #424242;
    text-transform: none;
}
#bp-taxonomy_canvas-mainPanel .treeLabel {
    font-size: 12px;
    padding: 0;
    margin: 0;
    list-style: none;
}
.widget-button {
    font-size: 18px;
    box-shadow: none;
}
.widget-button:hover {
    font-size: 18px;
    box-shadow: none;
    background-color: #424242;
    color: #fff;
}
.text-center {
    text-align: center;
    font-size: 13px;
    font-family: 'Roboto', sans-serif;
}
input:focus.color_0,
textarea:focus.color_0,
select:focus.color_0,
input:active.color_0,
.color_0 textarea:active.color_0,
select:active.color_0 {
    box-shadow: inset 0 -2px 0 #E0299B !important;
}
.row {
    border: none!important;
}
input:focus.color_1,
textarea:focus.color_1,
select:focus.color_1,
input:active.color_1,
.color_1 textarea:active.color_1,
select:active.color_1 {
    box-shadow: inset 0 -2px 0 #ffd306 !important;
}
input:focus.color_3,
textarea:focus.color_3,
select:focus.color_3,
input:active.color_3,
.color_3 textarea:active.color_3 {
    box-shadow: inset 0 -2px 0 #ff602e !important;
}
select:active.color_3 {
    box-shadow: inset 0 -2px 0 #ff602e !important;
}
select.primitive {
    font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    -o-box-sizing: border-box;
    box-sizing: border-box;
    color: #fff !important;
    font-size: 12px !important;
    padding: 4px !important;
    background-color: #474747;
    border: 1px #363636 solid;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    -webkit-font-smoothing: antialiased !important;
}
.edit-scroll {
    overflow-y: scroll;
    top: 0;
    right: 0;
}
.edit-scroll::-webkit-scrollbar {
    width: 16px;
    background-color: #424242;
}
.edit-scroll::-webkit-scrollbar-thumb {
    background-color: #212121;
    border-radius: 10px;
}
.edit-scroll::-webkit-scrollbar-thumb:hover {
    background-color: #212121;
    border: none;
}
.edit-scroll::-webkit-scrollbar-thumb:active {
    background-color: #212121;
    border: none;
}
.form-control:disabled {
    color: white;
}
.projecttasks .btn-success.btn-border {
    border-color: #11c78e !important;
    color: #11c78e !important;
}
.projecttasks .btn-border {
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    border: 1.5px solid !important;
    border-color: rgba(0, 0, 0, 0.1) !important;
    border-radius: 3px !important;
    background-color: transparent !important;
}
.projecttasks .btn-success.btn-border:hover {
    color: #fff !important;
    background-color: #11c78e !important;
}
.projecttasks .btn-disabled.btn-border {
    border-color: #8e8e8e !important;
    color: #8e8e8e !important;
}
.projecttasks .btn-disabled.btn-border:hover {
    color: #fff !important;
    background-color: #8e8e8e !important;
}
.paging .btn {
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3) !important;
}
.badge {
    font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: normal;
}
.In.Progress.badge {
    background-color: #E68FBB;
    font-size: 13px;
    padding: 6px 10px;
    margin: 0px;
    line-height: 13px;
}
/* ... */

